[tool.poetry]
name = "poetry -version"
version = "0.1.0"
description = ""
authors = ["Leaf <beepee7749@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry _version"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
telebot = "^0.0.5"
google-generativeai = "^0.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
